[package]
name = "code_scan_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["full", "visit", "extra-traits"] }
walkdir = "2.3"
quote = "1.0"
proc-macro2 = "1.0"
structopt = "0.3"